Add nbt support for item configs, greatly improve insulation backend